fix spacing and make page mdx

--- a/src/mdx.css
+++ b/src/mdx.css
@@ -40,7 +40,7 @@
     --color-canvas-default: #0d1117;
     --color-canvas-subtle: #161b22;
     --color-border-default: #30363d;
-    --color-border-muted: #21262d;
+    --color-border-muted: #2d384b;
     --color-neutral-muted: rgba(110,118,129,0.4);
     --color-accent-fg: #2f81f7;
     --color-accent-emphasis: #1f6feb;
@@ -384,36 +384,39 @@
 .markdown-body h4,
 .markdown-body h5,
 .markdown-body h6 {
-  margin-top: 24px;
-  margin-bottom: 16px;
+  margin-top: 16px;
+  margin-bottom: 0;
   font-weight: var(--base-text-weight-semibold, 600);
   line-height: 1.25;
 }
 
-.markdown-body h2 {
-  font-weight: var(--base-text-weight-semibold, 600);
+.markdown-body h1 {
   padding-bottom: .3em;
-  font-size: 1.5em;
+  margin-bottom: 12px;
+  font-size: 2em;
+  border-bottom: 1px solid var(--color-border-muted);
+}
+
+.markdown-body h2 {
+  padding-bottom: .2em;
+  margin-bottom: 12px;
+  font-size: 1.75em;
   border-bottom: 1px solid var(--color-border-muted);
 }
 
 .markdown-body h3 {
-  font-weight: var(--base-text-weight-semibold, 600);
   font-size: 1.25em;
 }
 
 .markdown-body h4 {
-  font-weight: var(--base-text-weight-semibold, 600);
   font-size: 1em;
 }
 
 .markdown-body h5 {
-  font-weight: var(--base-text-weight-semibold, 600);
   font-size: .875em;
 }
 
 .markdown-body h6 {
-  font-weight: var(--base-text-weight-semibold, 600);
   font-size: .85em;
   color: var(--color-fg-muted);
 }
